--- a/JavaGrammar/.project
+++ b/JavaGrammar/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JG161326</name>
+	<name>JavaGrammar</name>
 	<comment></comment>
 	<projects>
 	</projects>
